--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
         <a href="#">Download Excursion (Coming soon!)</a>
     </header>
 
-    <!-- Add more sections as needed -->
+    <video autoplay loop muted>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <section>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    </section>
+
+    <section>
+        <img src="resources/pictures/camp.webp" alt="Campsite at night">
+    </section>
+
+    <section>
+        <img src="resources/pictures/phone.webp" alt="Cellphone icon">
+        <h3>Coming Soon for iPhone and Android</h3>
+        <a href="#">Download Excursion (Coming soon!)</a>
+    </section>
+
+    <footer>
+        <p>© Excursion</p>
+    </footer>
 </body>
 </html>
